fix: disabled button color contrast

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -278,8 +278,9 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus {
   cursor: not-allowed;
   background-color: var(--quaternary-background);
-  border-color: var(--quaternary-color);
-  color: var(--quaternary-color);
+  border-color: var(--gray-45);
+  color: var(--secondary-color);
+  opacity: 0.8;
 }
 
 .btn-cta {
